# parking-pi

./: README.md
Tests/: TestStream.py
gate-watcher/src/: README.md  leds.py  main.py  pyproject.toml  requirements.txt  servo.py  testGPIOs.py
spot-watcher/src/: README.md  bay_calibrator.py  bays.json  bays.json.confirmed  captureEmptyReference.py  detect_spots.py  latest_spots.json  main.py  pyproject.toml  runInstructions.txt  sendBayStatus.py  send_bay_status_dev.py  send_spots.py  test_bays.py
src/: main.py  pyproject.toml
web-server/src/: .gitignore  README.md  main.py  main_new.py  pyproject.toml
web-server/src/static/: admin_script.js  script.js  style.css
web-server/src/templates/: admin_index.html  index.html
