[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "requests>=2.32.5",
    "scikit-image>=0.25.2",
]
